--- a/src/plugins/curlget/CMakeLists.txt
+++ b/src/plugins/curlget/CMakeLists.txt
@@ -4,6 +4,13 @@ if (DEPENDENCY_PHASE)
 		remove_plugin(curlget "Curl-dev not found")
 	endif ()
 	find_package(OpenSSL)
+	if(NOT OPENSSL_FOUND)
+		remove_plugin(curlget "OpenSSL-dev not found")
+	endif ()
+	if(OPENSSL_FOUND AND CURL_FOUND)
+	    set (CURLGET_INCLUDE_DIRS ${CURL_INCLUDE_DIR} ${OPENSSL_INCLUDE_DIR})
+	    set (CURLGET_LIBRARY_DIRS ${CURL_LIBRARIES} ${OPENSSL_LIBRARIES})
+	endif ()
 endif ()
 		
 add_plugin (curlget
@@ -11,10 +18,8 @@ add_plugin (curlget
 		curlget.h
 		curlget.c
 	INCLUDE_DIRECTORIES 
-		${CURL_INCLUDE_DIR}
-		${OPENSSL_INCLUDE_DIR}
+		${CURLGET_INCLUDE_DIRS}
 	LINK_LIBRARIES
-		${CURL_LIBRARIES}
-		${OPENSSL_LIBRARIES}
+		${CURLGET_LIBRARY_DIRS}
 	ADD_TEST
 	)
