--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ before_install:
       brew install python;
       brew install lua;
       brew install yajl;
-      brew install augeas --HEAD;
+      brew install augeas;
       brew install dbus;
       brew install qt5;
       brew install discount;
