Tests: Add test for cascading tutorial

--- a/tests/shell/shell_recorder/tutorial_wrapper/CMakeLists.txt
+++ b/tests/shell/shell_recorder/tutorial_wrapper/CMakeLists.txt
@@ -15,4 +15,5 @@ add_s_test (hosts "${CMAKE_SOURCE_DIR}/src/plugins/hosts/README.md")
 add_s_test (line "${CMAKE_SOURCE_DIR}/src/plugins/line/README.md")
 add_s_test (mathcheck "${CMAKE_SOURCE_DIR}/src/plugins/mathcheck/README.md")
 add_s_test (mozpref "${CMAKE_SOURCE_DIR}/src/plugins/mozpref/README.md")
+add_s_test (tutorial_cascading "${CMAKE_SOURCE_DIR}/doc/tutorials/cascading.md")
 add_s_test (tutorial_mount "${CMAKE_SOURCE_DIR}/doc/tutorials/mount.md")
