--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -52,6 +52,15 @@ if (INSTALL_SYSTEM_FILES)
 			DESTINATION ${BASH_COMPLETION_COMPLETIONSDIR}
 			RENAME kdb)
 
+	set (FISH_COMPLETION_COMPLETIONSDIR "/usr/share/fish/vendor_completions.d")
+	find_package (PkgConfig)
+	if (PKG_CONFIG_FOUND)
+		include (LibFindMacros)
+		pkg_get_variable (FISH_COMPLETION_COMPLETIONSDIR fish completionsdir)
+	endif ()
+	install (FILES kdb.fish
+		DESTINATION ${FISH_COMPLETION_COMPLETIONSDIR})
+
 	if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 		# On Mac OS X we need to copy this into another folder.
 		# Because of "System Integrity Protection", we need to
