--- a/src/plugins/curlget/CMakeLists.txt
+++ b/src/plugins/curlget/CMakeLists.txt
@@ -3,6 +3,9 @@ if (DEPENDENCY_PHASE)
 	if(NOT CURL_FOUND)
 		remove_plugin(curlget "Curl-dev not found")
 	endif ()
+	if (CURL_VERSION_STRING VERSION_LESS "7.28.0")
+	    	remove_plugin(curlget "libcurl >= 7.28.0 required")
+	endif ()
 	find_package(OpenSSL)
 	if(NOT OPENSSL_FOUND)
 		remove_plugin(curlget "OpenSSL-dev not found")
