add babel to dependencies (from devDependencies)

--- a/src/tools/web/elektrad/package.json
+++ b/src/tools/web/elektrad/package.json
@@ -13,28 +13,28 @@
   "scripts": {
     "start": "npm run build && npm run start:prod",
     "start:verbose": "npm run build && npm run start:prod:verbose",
-    "build": "babel -d build/ src/",
-    "start:prod": "cross-env DEBUG=elektrad:*,-*debug,-*log node build/",
-    "start:prod:verbose": "cross-env DEBUG=elektrad:* node build/",
+    "build": "cross-env NODE_ENV=production babel -d build/ src/",
+    "start:prod": "cross-env NODE_ENV=production DEBUG=elektrad:*,-*debug,-*log node build/",
+    "start:prod:verbose": "cross-env NODE_ENV=production DEBUG=elektrad:* node build/",
     "start:dev": "cross-env NODE_ENV=development DEBUG=elektrad:* babel-watch src/",
     "test": "npm run lint",
     "lint": "eslint src"
   },
   "dependencies": {
+    "babel-core": "^6.11.4",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-register": "^6.11.6",
+    "babel-runtime": "^6.11.6",
+    "cross-env": "^2.0.0",
     "body-parser": "^1.15.2",
     "debug-dude": "^1.0.3",
     "express": "^4.14.0"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
-    "babel-core": "^6.11.4",
     "babel-eslint": "^7.1.1",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-register": "^6.11.6",
-    "babel-runtime": "^6.11.6",
     "babel-watch": "^2.0.2",
-    "cross-env": "^2.0.0",
     "eslint": "^3.11.1",
     "eslint-config-standard": "^6.2.1"
   }
