update license in package.json to BSD

--- a/src/tools/web/clusterd/package.json
+++ b/src/tools/web/clusterd/package.json
@@ -8,7 +8,7 @@
     "clusterd"
   ],
   "homepage": "http://git.libelektra.org/blob/master/src/tools/web/",
-  "license": "MIT",
+  "license": "BSD",
   "main": "src/index.js",
   "scripts": {
     "postinstall": "npm install --prefix ../client",
