--- a/src/tools/web/client/package.json
+++ b/src/tools/web/client/package.json
@@ -8,7 +8,7 @@
     "client"
   ],
   "homepage": "http://git.libelektra.org/blob/master/src/tools/web/",
-  "license": "MIT",
+  "license": "BSD",
   "main": "src/index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack && npm run build:assets",
