--- a/src/tools/web/elektrad/package.json
+++ b/src/tools/web/elektrad/package.json
@@ -8,7 +8,7 @@
     "elektrad"
   ],
   "homepage": "http://git.libelektra.org/blob/master/src/tools/web/",
-  "license": "MIT",
+  "license": "BSD",
   "main": "src/index.js",
   "scripts": {
     "start": "npm run build && npm run start:prod",
