--- a/src/tools/web/clusterd/package.json
+++ b/src/tools/web/clusterd/package.json
@@ -41,6 +41,8 @@
     "babel-eslint": "^7.1.1",
     "babel-watch": "^2.0.2",
     "eslint": "^3.11.1",
-    "eslint-config-standard": "^6.2.1"
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^2.0.1"
   }
 }
