implement a way to create new keys

--- a/src/tools/web/client/.eslintrc
+++ b/src/tools/web/client/.eslintrc
@@ -3,7 +3,7 @@
   "plugins": [ "react" ],
   "extends": [
     "standard",
-    "plugin:react/all"
+    "plugin:react/recommended"
   ],
   "rules": {
     "comma-dangle": [2, "always-multiline"],
