--- a/src/tools/web/elektrad/package.json
+++ b/src/tools/web/elektrad/package.json
@@ -36,6 +36,7 @@
     "babel-eslint": "^7.1.1",
     "babel-watch": "^2.0.2",
     "eslint": "^3.11.1",
-    "eslint-config-standard": "^6.2.1"
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-standard": "^2.0.1"
   }
 }
