--- a/src/tools/web/elektrad/package.json
+++ b/src/tools/web/elektrad/package.json
@@ -37,6 +37,7 @@
     "babel-watch": "^2.0.2",
     "eslint": "^3.11.1",
     "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1"
   }
 }
