elektrad: add source-code documentation

--- a/src/tools/web/elektrad/package.json
+++ b/src/tools/web/elektrad/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@elektra-web/elektrad",
   "version": "1.0.0",
-  "description": "server to remotely control elektra",
+  "description": "server to remotely control Elektra",
   "keywords": [
     "elektra",
     "elektra-web",
