doc: some ideas about metadata

--- a/doc/METADATA.ini
+++ b/doc/METADATA.ini
@@ -444,7 +444,8 @@ description= Flag keys that will be removed in further versions
 note= thanks to Config::Model for that idea
 
 [internal/<plugin>/*]
-status= proposed
+status= implemented
+usedby/plugin= ini
 description= Internal metadata to be ignored by other plugins.
 example=internal/ini/parent could be the name for internal parent
 	information of the ini plugin.
@@ -480,13 +481,17 @@ description= links a key to a specific set of version(s). Can be used to control
 status= idea
 description= avoid writing on the value of the key, it still can be removed
 
+[restrict/null]
+status= idea
+description= null keys are not allowed
+
+[restrict/binary]
+status= idea
+description= binary keys are not allowed
+
 [restrict/remove]
 status= idea
 description= avoid removal of key (needs schema-checker to read key)
-
-[final]
-status= idea
-description= do not allow the key to be overwritten by a merger plugin
 
 [evaluate/<language>]
 type= program code
