rest-frontend: add breadcrumb text for authors
website: footer (fixes #1284)

note: by design it is only possible to give sections a breadcrumb, so we have to use something like 'developers' instead of authors. if we did use 'authors' for the section as well, the URL would look like ...site/authors/authors

--- a/src/tools/rest-frontend/resources/structure.json.in
+++ b/src/tools/rest-frontend/resources/structure.json.in
@@ -275,7 +275,7 @@
             {
                 "name": "Authors",
                 "type": "staticlist",
-                "ref": "development",
+                "ref": "developers",
                 "dev-comment": "We need to use an own section to be able to display the authors file.",
                 "children": [
                     {
