--- a/src/tools/rest-frontend/package.json
+++ b/src/tools/rest-frontend/package.json
@@ -11,7 +11,11 @@
         "snippet sharing"
     ],
     "author": "Namoshek",
-    "license": "BSD",
+    "license": "BSD-3-Clause",
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/ElektraInitiative/libelektra.git"
+    },
     "devDependencies": {
         "@iamadamjowett/angular-logger-max": "^1.2.3",
         "angular": "^1.5.8",
