doc: fix check/type metadata

--- a/doc/METADATA.ini
+++ b/doc/METADATA.ini
@@ -352,12 +352,28 @@ example = device mpoint type options [dumpfreq] [passno]
 
 
 [check/type]
-type= string
+type= enum
+	short
+	unsigned_short
+	long
+	unsigned_long
+	long_long
+	unsigned_long_long
+	float
+	double
+	long_double
+	char
+	boolean
+	octet
+	any
+	empty
+	FSType
+	string
 status= implemented
 usedby/plugin= type
-description= defines the type of the value, as specified in CORBA.
-example = short unsigned_short long unsigned_long long_long
-	unsigned_long_long float double long_double char boolean octet
+description= defines the type of the value, as specified in CORBA
+	(except of 2: wchar, wstring; and 4 additions: any, empty, FSType, string).
+example = any
 
 [check/type/min]
 type= int
