curlget: change OpenSSL detection to use the CMake module
See #1242 for full discussion.

--- a/src/plugins/curlget/CMakeLists.txt
+++ b/src/plugins/curlget/CMakeLists.txt
@@ -6,7 +6,7 @@ if (DEPENDENCY_PHASE)
 	if (CURL_VERSION_STRING VERSION_LESS "7.28.0")
 	    	remove_plugin(curlget "libcurl >= 7.28.0 required")
 	endif ()
-	find_package(OpenSSL)
+	find_package(LibOpenSSL)
 	if(NOT OPENSSL_FOUND)
 		remove_plugin(curlget "OpenSSL-dev not found")
 	endif ()
