jna-bindings-maven: allow to install to local maven repository from share/java improve and adjust readme remove unnecessary cmake file #1083 #1238

--- a/src/bindings/jna/CMakeLists.txt
+++ b/src/bindings/jna/CMakeLists.txt
@@ -14,31 +14,39 @@ if (NOT MAVEN_EXECUTABLE STREQUAL "MAVEN_EXECUTABLE-NOTFOUND")
 		@ONLY
 	)
 
+	# required to have a recognizable name for the pom upon installation in case other software installs
+	# a pom to the target directory and calls it pom.xml
+	file (
+		GENERATE OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/libelektra4j/libelektra4j-${KDB_VERSION}.pom.xml"
+		INPUT "${CMAKE_CURRENT_BINARY_DIR}/libelektra4j/pom.xml"
+	)
+
 	# then copy over the source files in the build folder as thats the easiest way to handle it
 	file (
 		COPY "${CMAKE_CURRENT_SOURCE_DIR}/libelektra4j"
 		DESTINATION "${CMAKE_CURRENT_BINARY_DIR}"
 	)
 
-	# compile it and build the jar, but only test in test phase
+	# compile it and build the jar
 	add_custom_target (
 		jna ALL
 		COMMAND ${MAVEN_EXECUTABLE} -q -B -DskipTests=true package
 		WORKING_DIRECTORY libelektra4j
 	)
 
-	# install_jar from UseJava doesn't really do more than that
 	install (
-		FILES "${CMAKE_CURRENT_BINARY_DIR}/libelektra4j/target/libelektra4j-${KDB_VERSION}.jar"
+		FILES
+			"${CMAKE_CURRENT_BINARY_DIR}/libelektra4j/target/libelektra4j-${KDB_VERSION}.jar"
+			"${CMAKE_CURRENT_BINARY_DIR}/libelektra4j/libelektra4j-${KDB_VERSION}.pom.xml"
 		DESTINATION "share/java"
 	)
 
-	# and add maven test to be executed with ctest in the testing phase
+	# and add maven test to execute with ctest in the testing phase
 	add_test (
 		NAME testjna_maven
 		COMMAND ${MAVEN_EXECUTABLE} -B test
 		WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/libelektra4j"
 	)
 else ()
-	remove_binding (jna "Maven Executable not found, which is required to build the jna bindings")
+	remove_binding (jna "Maven Executable not found, but required to build the jna bindings")
 endif ()
