--- a/scripts/configure-firefox.in
+++ b/scripts/configure-firefox.in
@@ -1,6 +1,7 @@
 #!/bin/bash
 
-. "$(dirname "$0")/include-common"
+SCRIPTS_DIR=$(dirname "$0")
+. "${SCRIPTS_DIR}/configure-common"
 
 WorkingDir="@CMAKE_INSTALL_PREFIX@/@TARGET_TOOL_EXEC_FOLDER@/"
 TriggerPort=65432
