--- a/src/bindings/jna/libelektra4j/pom.xml.in
+++ b/src/bindings/jna/libelektra4j/pom.xml.in
@@ -40,4 +40,24 @@
 		</pluginManagement>
 	</build>
 
+	<profiles>
+		<profile>
+			<id>env-test</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.19.1</version>
+						<configuration>						
+							<systemPropertyVariables>
+								<jna.library.path>${basedir}/../../../../lib</jna.library.path>
+							</systemPropertyVariables>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 </project>
