--- a/src/bindings/jna/libelektra4j/pom.xml.in
+++ b/src/bindings/jna/libelektra4j/pom.xml.in
@@ -23,7 +23,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<pluginManagement>
 			<plugins>
@@ -49,10 +49,30 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
 						<version>2.19.1</version>
-						<configuration>						
+						<configuration>
 							<systemPropertyVariables>
 								<jna.library.path>${basedir}/../../../../lib</jna.library.path>
 							</systemPropertyVariables>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>env-test-without-kdb</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.19.1</version>
+						<configuration>
+							<systemPropertyVariables>
+								<jna.library.path>${basedir}/../../../../lib</jna.library.path>
+							</systemPropertyVariables>
+							<excludes>
+								<exclude>**/KDBTest.java</exclude>
+							</excludes>
 						</configuration>
 					</plugin>
 				</plugins>
