metadata: fix inconsistencies

--- a/doc/METADATA.ini
+++ b/doc/METADATA.ini
@@ -9,7 +9,7 @@
 #
 # [the name of the metakey]
 # type= (string|enumeration|regular expression) the type of the metavalue
-# status= (implemented|idea) the current state of this metadata entry
+# status= (implemented|proposed|idea|deprecated|unclear) the current state of this metadata entry, deprecated means it is implemented but use is not recommended
 # usedby/api= the API methods which use the metakey (space separated)
 # usedby/plugin= the plugins which use the metakey (space separated)
 # usedby/tool= the tools which use the metakey (space separated)
@@ -42,7 +42,7 @@ version/minor=5
 [order]
 type= int
 status= implemented
-usedby/plugin= hosts augeas keytometa
+usedby/plugin= hosts augeas ini
 usedby/api= elektraKeyCmpOrder
 description= relative order in the keyset if non-alphabetical order
 	is needed. This metadata is only to preserve order as found in
@@ -60,7 +60,7 @@ note= this will rarely used within specifications, but is directly
 [comment]
 type= string
 status= implemented
-usedby/plugin= hosts (keytometa)
+usedby/plugin= (keytometa)
 description= the users comment about the key (mostly its value)
 	the first line is the comment after a key/value
 	further lines are the lines before a key/value
@@ -138,7 +138,7 @@ description=reserved meta information that will be preserved during the whole
 type=empty
 status=implemented
 usedby/api= keyNew keyVNew keyIsBinary keyIsString keyValue keyGetValueSize keyString keyGetString keySetString keyGetBinary keySetBinary
-usedby/plugin= xmltool yajl null
+usedby/plugin= null
 description= For this metadata only the presence is significant, not its value.
 	It is used to tag binary keys. Binary keys are keys that either have no value (null keys, keyValue returns null).
 
@@ -316,6 +316,12 @@ status= implemented
 description = for _ as basename as array. Otherwise the presence determines
 	if a key is required.
 
+[mandatory]
+type = range
+status= unclear
+usedby/plugin= required
+description = alternative for required plugin
+
 #
 # Per-Key Log
 #
@@ -325,11 +331,15 @@ status = proposal
 description = logs + pluginname + criticality
 
 
-[warnings]
+[warnings/#]
 status = implemented
+description = a number of warnings, see src/error/specification
 
 [error]
 status = implemented
+description = an error, see src/error/specification
+
+
 
 
 #
@@ -377,15 +387,33 @@ example = any
 
 [check/type/min]
 type= int
-status= implemented
+status= deprecated
 usedby/plugin= type
 description= defines the min value type of the integer value
+	use range instead
 
 [check/type/max]
 type= int
-status= implemented
+status= deprecated
 usedby/plugin= type
 description= defines the max value type of the integer value
+	use range instead
+
+[check/math]
+type= string
+status = implemented
+usedby/plugin= mathcheck
+description= check if value conforms to mathematical expression
+
+[check/ipaddr]
+type= enum
+	
+	ipv4
+	ipv6
+status = implemented
+usedby/plugin= network
+description= check if value resolves correctly to an ipaddr
+	empty value uses either ipv4 or ipv6
 
 [check/format]
 type= string
@@ -423,6 +451,15 @@ status= implemented
 usedby/plugin= validation
 description= to invert match
 
+[check/validation/type]
+type=enum
+	ERE
+	BRE
+status= deprecated
+usedby/plugin= validation
+description= type of match, to toggle REG_EXTENDED
+	TODO: strange syntax, needs improvements
+
 [check/range]
 status= idea
 description= range checks, from-to, or arbitrary sets of numbers
@@ -434,6 +471,22 @@ status= implemented
 usedby/plugin= enum
 description= List of apostrophe enclosed values separated by
 	commas to check against
+
+[check/enum/#]
+status= implemented
+usedby/plugin= enum
+description= An array with different enum values to be used
+	instead of check/enum
+
+[check/enum/multi]
+status= implemented
+usedby/plugin= enum
+type= char
+description= Specifies if multiple, but different, strings are allowed
+	within an value. The character given within this metavalue
+	is the separator.
+example= _
+
 
 [check/calculate]
 status= implemented
@@ -450,6 +503,59 @@ type= string
 description= A ternary conditional style operator to define 
 	relations between keys
 
+[condition/validsuffix]
+status= proposal
+usedby/plugin= conditionals
+type= string
+description= A unit of measure style prefix
+
+
+[check/condition/#]
+status= implemented
+usedby/plugin= conditionals
+type= string
+description= Same as check/condition, but as array
+
+[assign/condition]
+status= implemented
+usedby/plugin= conditionals
+type= string
+description= A ternary conditional style operator to assign
+	a value depending on a condition
+
+[check/date]
+status= implemented
+usedby/plugin= date
+type= enum
+	POSIX
+	ISO8601
+	RFC2822
+description= A standard for a date specification.
+
+[check/date/format]
+status= implemented
+usedby/plugin= date
+type= string
+description= A format for a date specification.
+
+[trigger/warnings]
+usedby/plugin= error
+type= long
+status= implemented
+description= Trigger a warning with given warning number from src/error/specifications
+
+[trigger/error]
+usedby/plugin= error
+type= long
+status= implemented
+description= Trigger an error with given error number from src/error/specifications
+
+[trigger/error/nofail]
+usedby/plugin= error
+type= long
+status= proposal
+description= Add the error but do not fail (to test broken plugins)
+
 #
 # Other information about keys
 #
@@ -461,7 +567,7 @@ note= thanks to Config::Model for that idea
 
 [internal/<plugin>/*]
 status= implemented
-usedby/plugin= ini
+usedby/plugin= (ini)
 description= Internal metadata to be ignored by other plugins.
 example=internal/ini/parent could be the name for internal parent
 	information of the ini plugin.
